--- a/Drambarean_AnaMaria_Lab2/MainWindow.xaml
+++ b/Drambarean_AnaMaria_Lab2/MainWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Drambarean_AnaMaria_Lab2"
+        xmlns:CustomCommands="clr-namespace:Drambarean_AnaMaria_Lab2.CustomCommands"
         mc:Ignorable="d"
         Title="Virtual Doughnuts Factory" Height="450" Width="800" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" Loaded="frmMain_Loaded">
-    <Grid>
+    <Grid MenuItem.Click="FilledItemsShow_Click">
         <Grid.RowDefinitions>
             <RowDefinition Height="9*"/>
             <RowDefinition Height="53*"/>
@@ -39,17 +40,17 @@
                 <Label x:Name="lblQuantity" Content="Quantity" Canvas.Left="28" Canvas.Top="12"/>
                 <TextBox x:Name="txtQuantity" Canvas.Left="92" Canvas.Top="18" Text="0" TextWrapping="Wrap" Width="58" KeyUp="txtQuantity_KeyUp"/>
                 <Label x:Name="lblType" Content="Type" Canvas.Left="191" Canvas.Top="12"/>
-                <ComboBox x:Name="cmbType" Canvas.Left="246" Canvas.Top="14" Width="120" RenderTransformOrigin="0.779,0.612">
-
+                <ComboBox x:Name="cmbType" Canvas.Left="246" Canvas.Top="14" Width="120" RenderTransformOrigin="0.779,0.612" SelectionChanged="cmbType_SelectionChanged">
+                    
                 </ComboBox>
                 <Label x:Name="lblPrice" Content="Price" Canvas.Left="391" Canvas.Top="10"/>
                 <TextBox x:Name="txtPrice" Canvas.Left="434" Canvas.Top="16" Text="0" TextWrapping="Wrap" Width="120" IsReadOnly="True"/>
-                <ListBox Height="64" Width="544" Canvas.Top="54" Canvas.Left="10"/>
+                <ListBox x:Name="lstSale" Height="64" Width="544" Canvas.Top="54" Canvas.Left="10"/>
                 <Label x:Name="lblTotal" Content="Total" Canvas.Left="391" Canvas.Top="125"/>
                 <TextBox x:Name="txtTotal" Canvas.Left="434" Canvas.Top="129" Text="0" TextWrapping="Wrap" Width="120" IsReadOnly="True"/>
-                <Button x:Name="btnAddToSale" Content="Add To Sale" Canvas.Left="588" Canvas.Top="54" Width="114" Height="21"/>
-                <Button x:Name="btnRemoveItem" Content="Remove Item" Canvas.Left="588" Canvas.Top="86" Width="114"/>
-                <Button x:Name="btnCheckOut" Content="Checkout" Canvas.Left="588" Canvas.Top="128" Width="114"/>
+                <Button x:Name="btnAddToSale" Content="Add To Sale" Canvas.Left="588" Canvas.Top="54" Width="114" Height="21" Click="btnAdd_Click"/>
+                <Button x:Name="btnRemoveItem" Content="Remove Item" Canvas.Left="588" Canvas.Top="86" Width="114" Click="btnRemoveItem_Click"/>
+                <Button x:Name="btnCheckOut" Content="Checkout" Canvas.Left="588" Canvas.Top="128" Width="114" Click="btnCheckOut_Click"/>
 
             </Canvas>
         </GroupBox>
@@ -66,10 +67,18 @@ Click="glazedToolStripMenuItem_Click" IsCheckable="True"/>
                         <MenuItem x:Name="sugarToolStripMenuItem" Header="Sugar"
 IsCheckable="True" Click="sugarToolStripMenuItem_Click"/>
                     </MenuItem>
-                    <MenuItem Header="Filled"/>
+                    <MenuItem Header="Filled" Click="FilledItems_Click" >
+                        <MenuItem x:Name="lemonFilledMenuItem" Header="Lemon"
+                                  IsCheckable="True"/>
+                        <MenuItem x:Name="chocolateFilledMenuItem" Header="Chocolate"
+                                  IsCheckable="True"/>
+                        <MenuItem x:Name="vanillaFilledMenuItem" Header="Vanilla"
+                                  IsCheckable="True"/>
+                    </MenuItem>
                 </MenuItem>
-                <MenuItem x:Name="mnuStop" Header="Stop"
-Click="stopToolStripMenuItem_Click"/>
+                <MenuItem x:Name="mnuStop" Header="Stop" Click="stopToolStripMenuItem_Click"
+InputGestureText="Ctrl+S" Command="CustomCommands:StopCommand.Launch" />
+                <MenuItem x:Name="mnuInventory" Command="ApplicationCommands.Print" Header="Inventory" ></MenuItem>
             </MenuItem>
         </Menu>
     </Grid>
